xorg-server (2:1.7.3.901-2) UNRELEASED; urgency=low

  [ Timo Aaltonen ]
  * Run udevadm trigger on postinst, and depend on udev [linux-any].

  [ Julien Cristau ]
  * Add xserver-common dependency on x11-xkb-utils for xkbcomp.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 14 Dec 2009 11:21:42 +0200

xorg-server (2:1.7.3.901-1) experimental; urgency=low

  [ Julien Cristau ]
  * Enable GLX 1.4 on DRI2 and swrast (from upstream, via F12).
  * xserver-xorg-dev: add Depends on x11proto-kb-dev and libxkbfile-dev for
    xkbsrv.h (closes: #559676).  Thanks, Ron!
  * Update input_id to the version in udev 149.
  * Update xserver-xorg-core bug script to run udevadm info instead of lshal.

  [ Brice Goglin ]
  * New upstream release.
    + Refresh patches.

 -- Brice Goglin <bgoglin@debian.org>  Sat, 12 Dec 2009 17:46:45 +0100

xorg-server (2:1.7.2-2) experimental; urgency=low

  [ Julien Cristau ]
  * debian/rules: upstream build system got fixed, no need to remove
    configure-generated files.
  * Steal input_id helper from udev, install it in /lib/xorg.  Thanks, Martin
    Pitt!

  [ Brice Goglin ]
  * Cherry pick upstream commit to fix the ABI.

 -- Brice Goglin <bgoglin@debian.org>  Mon, 30 Nov 2009 20:10:27 +0100

xorg-server (2:1.7.2-1) experimental; urgency=low

  * New upstream release
    + Xorg sets umask to 022 (closes: #555308)
  * Delete 09_debian_xserver_rtff.diff.  Was disabled since 1.3.99, and is not
    necessary since the fall back to builtin fonts was added.
  * Change the server's dependency on xserver-common to >= ${source:Version},
    to allow installation of different versions of the various servers.
  * Add build-dep on libglib2.0-dev, xkb-data and x11-xkb-utils for unit
    tests, and run the tests unless nocheck is in DEB_BUILD_OPTIONS.
  * Cherry-pick upstream commit to turn ModeDebug on during server startup,
    replacing our Turn-on-ModeDebug-by-default.patch.
  * Number our patches to make it easier to keep track of things.  Requested