@@ -86,9 +86,9 @@ Depends:
  xserver-common (>= ${source:Version}),
  xserver-xorg,
  keyboard-configuration [linux-any kfreebsd-any],
+ udev (>= 149) [linux-any],
  ${shlibs:Depends},
  ${misc:Depends},
- udev [linux-any],
 Recommends: libgl1-mesa-dri (>= 7.1~rc1)
 Suggests: xfonts-base, xfonts-100dpi | xfonts-75dpi, xfonts-scalable
 Conflicts:
